# python-kurs

./: README.md  pyproject.toml
exercises/: 01_everything_is_an_object.py  02_datatypes_and_functions.py  03_more_om_functions.py  04_an_introduction_to_objects.py  05_logic.py  06_loops.py
notebooks/: 01_everything_is_a_class.ipynb  02_datatyper_og_funksjoner.ipynb  03_mer_om_funksjoner.ipynb  04_an_introduction_to_objects.ipynb  05_logikk.ipynb  06_loops.ipynb  07_how_does_the_pre_system_work.ipynb  07_hvordan_fungerer_forsystemklassene.ipynb
