[tool.poetry]
name = "nr-kurs-python-dypdykk"
version = "0.1.0"
description = "dette er egentlig bare en test"
authors = ["Benedikt Goodman <bgo@ssb.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dapla-toolbelt = "^1.3.2"
pyarrow = "^15.0.2"
aiohttp = "^3.9.3"
cryptography = "^42.0.5"
pandas = "^2.2.1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"
grpcio = "^1.62.1"
ibis-framework = {extras = ["duckdb", "examples"], version = "^9.0.0"}
ssb-pre-system = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
